--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -25,7 +25,7 @@
                             <input class="form-control" type="text" name="city" placeholder="City..">
                         </div>
                         <div class="form-field">
-                            <input class="form-control" type="text" name="zipcode" placeholder="Zip code..">
+                            <input class="form-control" type="number" name="zipcode" placeholder="Zip code..">
                         </div>
                         <div class="form-field">
                             <input class="form-control" type="text" name="country" placeholder="Country..">
@@ -38,7 +38,7 @@
             </div>
             <br>
             <div class="box-element hidden" id="payment-info">
-                <small>Paypal Options</small>
+                <small>Pay Options</small>
                 <button id="make-payment">Pay</button>
             </div>
         </div>
