--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -39,7 +39,8 @@
             <br>
             <div class="box-element hidden" id="payment-info">
                 <small>Pay Options</small>
-                <button id="make-payment">Pay</button>
+                <!--<button id="make-payment">Pay</button>-->
+                <div id="paypal-button-container"></div>
             </div>
         </div>
         
@@ -53,19 +54,53 @@
                 <div class="cart-row">
 					<div style="flex:2"><img class="row-image" src="{{item.product.imageURL}}"></div>
 					<div style="flex:2"><p>{{item.product.name}}</p></div>
-					<div style="flex:1"><p>{{item.product.price}}$</p></div>
+					<div style="flex:1"><p>{{item.product.price}}BGN</p></div>
 					<div style="flex:1"><p>{{item.quantity}}</p></div>
 				</div>
                 {% endfor %}
                 <h5>Items: {{order.get_cart_items}}</h5>
-                <h5>Total: {{order.get_cart_total|floatformat:2}}$</h5>
+                <h5>Total: {{order.get_cart_total|floatformat:2}}BGN</h5>
             <div>
         </div>
     </div>
 
+    <script src="https://www.paypal.com/sdk/js?client-id=AY-fJbb3zM08C17G3Wnfef5JIFknq_XeDYqj2i7aQJqAzPVJeIp5sNkoLxotU76crO79oz1IrX88PJFd&currency=EUR"></script>
+
+    <script>
+        var total = '{{order.get_cart_total|floatformat:2}}'
+        var BGNtotal = parseFloat(total) * 0.51;
+        paypal.Buttons({
+
+            style: {
+                color:  'blue',
+                shape:  'pill',
+                label:  'pay',
+                height: 40
+            },
+            
+            // Set up the transaction
+            createOrder: function(data, actions) {
+                return actions.order.create({
+                    purchase_units: [{
+                        amount: {
+                            value: BGNtotal.toFixed(2)
+                        }
+                    }]
+                });
+            },
+
+            // Finalize the transaction
+            onApprove: function(data, actions) {
+                return actions.order.capture().then(function(details) {
+                    submitFormData()
+                });
+            }
+
+        }).render('#paypal-button-container');
+    </script>
+
     <script type="text/javascript">
         var shipping = '{{order.shipping}}'
-        var total = '{{order.get_cart_total|floatformat:2}}'
 
         if(shipping == 'False'){
             document.getElementById('shipping-info').innerHTML = ''
@@ -89,11 +124,11 @@
 	    	document.getElementById('form-button').classList.add("hidden")
 	    	document.getElementById('payment-info').classList.remove("hidden")
 	    })
-
+        /*
         document.getElementById('make-payment').addEventListener('click', function(e){
             submitFormData()
         })
-
+        */
         function submitFormData(){
             console.log('Payment button clicked')
         
@@ -138,6 +173,8 @@
             .then((data) => {
                   console.log('Success:', data)
                   alert('Transaction completed')
+                  cart = {}
+                  document.cookie ='cart=' + JSON.stringify(cart) + ";domain=;path=/"
                   window.location.href = "{% url 'store' %}"
         
                 })
