--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -19,15 +19,27 @@
                         <p>Shipping Information:</p>
                         <hr>
                         <div class="form-field">
+                            <div>
+                                <small>Zip Code</small>
+                            </div>
                             <input class="form-control" type="text" name="address" placeholder="Address..">
                         </div>
                         <div class="form-field">
+                            <div>
+                                <small>Zip Code</small>
+                            </div>
                             <input class="form-control" type="text" name="city" placeholder="City..">
                         </div>
                         <div class="form-field">
-                            <input class="form-control" type="number" name="zipcode" placeholder="Zip code..">
+                            <div>
+                                <small>Zip Code</small>
+                            </div>
+                            <input class="form-control" type="text" name="zipcode" placeholder="4000" pattern="[0-9]+" title="Only numbers">
                         </div>
                         <div class="form-field">
+                            <div>
+                                <small>Zip Code</small>
+                            </div>
                             <input class="form-control" type="text" name="country" placeholder="Country..">
                         </div>
                     </div>
