--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -11,7 +11,8 @@
 
 	<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 
-	<link rel="icon" type="image/x-icon" href="{% static 'images/favicon.png' %}"/>
+	<link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}"/>
+
 
 	<script type="text/javascript">
 		var user = '{{request.user}}'
