--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -13,52 +13,11 @@
 
 	<link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}"/>
 
-
-	<script type="text/javascript">
-		var user = '{{request.user}}'
-
-		function getToken(name) {
-			let cookieValue = null;
-			if (document.cookie && document.cookie !== '') {
-				const cookies = document.cookie.split(';');
-				for (let i = 0; i < cookies.length; i++) {
-					const cookie = cookies[i].trim();
-					if (cookie.substring(0, name.length + 1) === (name + '=')) {
-						cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-						break;
-					}
-				}
-			}
-			return cookieValue;
-		}
-		const csrftoken = getToken('csrftoken');
-	
-		function getCookie(name) {
-		    var cookieArr = document.cookie.split(";");
-
-		    for(var i = 0; i < cookieArr.length; i++) {
-		        var cookiePair = cookieArr[i].split("=");
-
-		        if(name == cookiePair[0].trim()) {
-		            return decodeURIComponent(cookiePair[1]);
-		        }
-		    }
-
-		    return null;
-		}
-		var cart = JSON.parse(getCookie('cart'))
-
-		if (cart == undefined) {
-			cart = {}
-			console.log('Cart Created!', cart)
-			document.cookie = 'cart=' + JSON.stringify(cart) + ";domain=;path=/"
-		}
-		console.log('Cart:', cart)
-
-	</script>
-
 </head>
 <body>
+	<script type="text/javascript" >
+		var user = '{{request.user}}'
+	</script>
 
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 	  <a class="navbar-brand" href="{% url 'store'%}">Shooztars</a>
@@ -100,6 +59,8 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
 	<script type="text/javascript" src="{% static 'js/cart.js' %}"></script>
+
+	<script type="text/javascript" src="{% static 'js/main.js' %}"></script>
 
 </body>
 </html>
