--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -20,27 +20,44 @@
 	</script>
 
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	  <a class="navbar-brand" href="{% url 'store'%}">Shooztars</a>
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-	    <span class="navbar-toggler-icon"></span>
-	  </button>
-
-	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-	    <ul class="navbar-nav mr-auto">
-	      <li class="nav-item active">
-	        <a class="nav-link" href="{%url 'store'%}">Store<span class="sr-only">(current)</span></a>
-	      </li>
-	    </ul>
-        <div class="form-inline my-2 my-lg-0">
-            <a href="#"class="btn btn-warning">Login</a>
-            
-            <a href="{% url 'cart' %}">
-               <img  id="cart-icon" src="{% static 'images/cart.png' %}">
-           </a>
-           <p id="cart-total">{{cartItems}}</p>
-
-       </div>
-	  </div>
+		<a class="navbar-brand" href="{% url 'store'%}">Shooztars</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+	
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item active">
+					<a class="nav-link" href="{% url 'store'%}">Store<span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Link</a>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Dropdown
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+						<a class="dropdown-item" href="#">Action</a>
+						<a class="dropdown-item" href="#">Another action</a>
+						<div class="dropdown-divider"></div>
+						<a class="dropdown-item" href="#">Something else here</a>
+					</div>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link disabled" href="#">Disabled</a>
+				</li>
+			</ul>
+			<div class="form-inline my-2 my-lg-0">
+				<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+				<a href="#" class="btn btn-warning">Login</a>
+				<a href="{% url 'cart' %}">
+					<img id="cart-icon" src="{% static 'images/cart.png' %}">
+				</a>
+				<p id="cart-total">{{cartItems}}</p>
+			</div>
+		</div>
 	</nav>
 
      <div class="container">
