--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -20,13 +20,13 @@
                         <hr>
                         <div class="form-field">
                             <div>
-                                <small>Zip Code</small>
+                                <small>Address</small>
                             </div>
                             <input class="form-control" type="text" name="address" placeholder="Address..">
                         </div>
                         <div class="form-field">
                             <div>
-                                <small>Zip Code</small>
+                                <small>City</small>
                             </div>
                             <input class="form-control" type="text" name="city" placeholder="City..">
                         </div>
@@ -38,7 +38,7 @@
                         </div>
                         <div class="form-field">
                             <div>
-                                <small>Zip Code</small>
+                                <small>Country</small>
                             </div>
                             <input class="form-control" type="text" name="country" placeholder="Country..">
                         </div>
@@ -51,7 +51,6 @@
             <br>
             <div class="box-element hidden" id="payment-info">
                 <small>Pay Options</small>
-                <!--<button id="make-payment">Pay</button>-->
                 <div id="paypal-button-container"></div>
             </div>
         </div>
@@ -90,7 +89,6 @@
                 height: 40
             },
             
-            // Set up the transaction
             createOrder: function(data, actions) {
                 return actions.order.create({
                     purchase_units: [{
@@ -101,7 +99,6 @@
                 });
             },
 
-            // Finalize the transaction
             onApprove: function(data, actions) {
                 return actions.order.capture().then(function(details) {
                     submitFormData()
