--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -44,14 +44,11 @@
 						<a class="dropdown-item" href="#">Something else here</a>
 					</div>
 				</li>
-				<li class="nav-item">
-					<a class="nav-link disabled" href="#">Disabled</a>
-				</li>
 			</ul>
 			<div class="form-inline my-2 my-lg-0">
 				<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
 				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-				<a href="#" class="btn btn-warning">Login</a>
+				<a href="{% url 'login' %}" class="btn btn-warning">Login</a>
 				<a href="{% url 'cart' %}">
 					<img id="cart-icon" src="{% static 'images/cart.png' %}">
 				</a>
