--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -2,79 +2,96 @@
 <!DOCTYPE html>
 {% load static %}
 <html>
-<head>
-	<title>Shooztars</title>
-
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
-
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
-	<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
-
-	<link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}"/>
-
-</head>
-<body>
-	<script type="text/javascript" >
-		var user = '{{request.user}}'
-	</script>
-
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<a class="navbar-brand" href="{% url 'store'%}">Shooztars</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
+	<head>
+		<title>Shooztars</title>
 	
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="navbar-nav mr-auto">
-				<li class="nav-item active">
-					<a class="nav-link" href="{% url 'store'%}">Store<span class="sr-only">(current)</span></a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Link</a>
-				</li>
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						Dropdown
-					</a>
-					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="#">Action</a>
-						<a class="dropdown-item" href="#">Another action</a>
-						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="#">Something else here</a>
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
+	
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	
+		<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
+		<link rel="stylesheet" type="text/css" href="{% static 'css/nav_dropdown.css' %}">
+	
+		<link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}"/>
+	
+	</head>
+	<body>
+		<script type="text/javascript" >
+			var user = '{{request.user}}'
+		</script>
+	
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<a class="navbar-brand" href="{% url 'store'%}">Shooztars</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+		
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item active">
+						<a class="nav-link" href="{% url 'store'%}">Store<span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Link</a>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							Language
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<h6 class="dropdown-header">Choose Language</h6>
+							<div class="dropdown-divider"></div>
+							<div class="text-center">
+								<button class="dropdown-item btn btn-light" onclick="changeLanguage('BG')">BG</button>
+								<button class="dropdown-item btn btn-light" onclick="changeLanguage('EN')">EN</button>
+							</div>
+						</div>
+					</li>
+				</ul>
+				<div class="form-inline my-2 my-lg-0">
+					<div class="input-group">
+						<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+						<div class="input-group-append">
+							<button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+								<i class="fas fa-search"></i>
+							</button>
+						</div>
 					</div>
-				</li>
-			</ul>
-			<div class="form-inline my-2 my-lg-0">
-				<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-				<a href="{% url 'login' %}" class="btn btn-warning">Login</a>
-				<a href="{% url 'cart' %}">
-					<img id="cart-icon" src="{% static 'images/cart.png' %}">
-				</a>
-				<p id="cart-total">{{cartItems}}</p>
+				</div>
+				<div class="form-inline my-2 my-lg-0 ml-auto">
+					{% if user.is_authenticated %}
+						<span class="navbar-text"><strong style="color: white;">Hello, {{ user.username }}</strong></span>
+						<button onclick="location.href='#'" class="btn btn-warning" style="margin-left: 10px;">Logout</button>
+					{% else %}
+						<a href="{% url 'login' %}" class="btn btn-warning">Login</a>
+					{% endif %}
+					<a href="{% url 'cart' %}">
+						<img id="cart-icon" src="{% static 'images/cart.png' %}">
+					</a>
+					<p id="cart-total">{{cartItems}}</p>
+				</div>
 			</div>
-		</div>
-	</nav>
-
-     <div class="container">
-            <br>
-            {% block content %}
-
-
-            {% endblock content %}
-         </div>
-
-
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
-	<script type="text/javascript" src="{% static 'js/cart.js' %}"></script>
-
-	<script type="text/javascript" src="{% static 'js/main.js' %}"></script>
-
-</body>
+		</nav>
+	
+	     <div class="container">
+	            <br>
+	            {% block content %}
+		
+		
+	            {% endblock content %}
+	         </div>
+		 
+		 
+		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+		 
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+		 
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+		 
+		<script type="text/javascript" src="{% static 'js/cart.js' %}"></script>
+		 
+		<script type="text/javascript" src="{% static 'js/main.js' %}"></script>
+		 
+	</body>
 </html>
