--- a/static/css/Reg_Log.css
+++ b/static/css/Reg_Log.css
@@ -45,11 +45,16 @@ html {
     padding: 0 2rem;
 }
 
+
 .input-group-text {
     background: #f7ba5b !important;
     color: white !important;
     border: 0 !important;
     border-radius: 0.25rem 0 0 0.25rem !important;
+}
+
+.input-group{
+    margin-bottom: 10px !important;
 }
 
 .input_user,
