--- a/store/templates/accounts/register.html
+++ b/store/templates/accounts/register.html
@@ -29,6 +29,18 @@
                                 </div>
                                 {{form.username}}
                             </div>
+                            <div class="input-group mb-3">
+                                <div class="input-group-append">
+                                    <span class="input-group-text"><i class="fas fa-user"></i></span>
+                                </div>
+                                {{form.first_name}}
+                            </div>
+                            <div class="input-group mb-3">
+                                <div class="input-group-append">
+                                    <span class="input-group-text"><i class="fas fa-user"></i></span>
+                                </div>
+                                {{form.last_name}}
+                            </div>
                             <div class="input-group mb-2">
                                 <div class="input-group-append">
                                     <span class="input-group-text"><i class="fas fa-envelope-square"></i></span>
@@ -66,9 +78,11 @@
         <script>
             var form_fields = document.getElementsByTagName('input');
             form_fields[1].placeholder = 'Username..';
-            form_fields[2].placeholder = 'Email..';
-            form_fields[3].placeholder = 'Enter password...';
-            form_fields[4].placeholder = 'Re-enter Password...';
+            form_fields[2].placeholder = 'First Name..';
+            form_fields[3].placeholder = 'Last Name..';
+            form_fields[4].placeholder = 'Email..';
+            form_fields[5].placeholder = 'Enter password...';
+            form_fields[6].placeholder = 'Re-enter Password...';
             for (var field in form_fields) {
                 form_fields[field].className += ' form-control';
             }
