--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -111,33 +111,18 @@
     <script type="text/javascript">
         var shipping = '{{order.shipping}}'
 
-        if(shipping == 'False'){
-            document.getElementById('shipping-info').innerHTML = ''
-        }
-
         if(user != 'AnonymousUser'){
             document.getElementById('user-info').innerHTML = ''
         }
-
-        if(shipping == 'False' && user != 'AnonymousUser'){
-
-            document.getElementById('form-wrapper').classList.add("hidden")
-            
-            document.getElementById('payment-info').classList.remove("hidden")
-        }
-
+        
         var form = document.getElementById('form')
-		form.addEventListener('submit', function(e){
-	    	e.preventDefault()
-	    	console.log('Form Submitted...')
-	    	document.getElementById('form-button').classList.add("hidden")
-	    	document.getElementById('payment-info').classList.remove("hidden")
-	    })
-        /*
-        document.getElementById('make-payment').addEventListener('click', function(e){
-            submitFormData()
+        form.addEventListener('submit', function(e){
+            e.preventDefault()
+            console.log('Form Submitted...')
+            document.getElementById('form-button').classList.add("hidden")
+            document.getElementById('payment-info').classList.remove("hidden")
+            document.getElementById('shipping-info').classList.add("hidden")
         })
-        */
         function submitFormData(){
             console.log('Payment button clicked')
         
@@ -151,14 +136,13 @@
                 'address':null,
                 'city':null,
                 'zipcode':null,
+                'country':null,
             }
-        
-            if (shipping != 'False'){
-                shippingInfo.address = form.address.value
-                shippingInfo.city = form.city.value
-                shippingInfo.zipcode = form.zipcode.value
-                shippingInfo.country = form.country.value
-            }
+
+            shippingInfo.address = form.address.value
+            shippingInfo.city = form.city.value
+            shippingInfo.zipcode = form.zipcode.value
+            shippingInfo.country = form.country.value
         
             if (user == 'AnonymousUser'){
                 userFormData.name = form.name.value
@@ -167,7 +151,7 @@
         
             console.log('Shipping Info:', shippingInfo)
             console.log('User Info:', userFormData)
-        
+
             var url = "/process_order/"
             fetch(url, {
                 method:'POST',
