Adding language change option to the site

--- a/store/templates/store/add_product.html
+++ b/store/templates/store/add_product.html
@@ -1,10 +1,11 @@
 {% extends 'store/main.html'%}
+{% load i18n %}
 {% load static %}
 {% block content%}
-    <h2>Add Product</h2>
+    <h2>{% trans 'Add Product' %}</h2>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Add Product</button>
+        <button type="submit">{% trans 'Add Product' %}</button>
     </form>
 {% endblock %}
