--- a/store/templates/accounts/profile.html
+++ b/store/templates/accounts/profile.html
@@ -1,13 +1,14 @@
 {% extends 'store/main.html'%}
+{% load i18n %}
 {% load static %}
 {% block content %}
 
-<h1>Welcome, {{ user.username }}</h1>
-<p>First name: {{ user.first_name }}</p>
-<p>Last name: {{ user.last_name }}</p>
-<p>Email: {{ user.email }}</p>
-<p>Staff status: {{ user.is_staff }}</p>
-<p>Active status: {{ user.is_active }}</p>
-<p>Date joined: {{ user.date_joined }}</p>
+<h1>{% trans 'Welcome, ' %} {{ user.username }}</h1>
+<p>{% trans 'First name:' %} {{ user.first_name }}</p>
+<p>{% trans 'Last name:' %} {{ user.last_name }}</p>
+<p>{% trans 'Email:' %} {{ user.email }}</p>
+<p>{% trans 'Staff status:' %} {{ user.is_staff }}</p>
+<p>{% trans 'Active status:' %} {{ user.is_active }}</p>
+<p>{% trans 'Date joined:' %} {{ user.date_joined }}</p>
 
 {% endblock %}
