--- a/store/templates/accounts/register.html
+++ b/store/templates/accounts/register.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
+{% load i18n %}
 {% load static %}
 <html>
     <head>
 
-        <title>Login</title>
+        <title>{% trans "Login" %}</title>
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
@@ -17,7 +18,7 @@
             <div class="d-flex justify-content-center h-100">
                 <div class="user_card">
                     <div class="d-flex justify-content-center">
-                        <h3 id="form-title">REGISTER ACCOUNT</h3>
+                        <h3 id="form-title">{% trans 'Register Account' %}</h3>
                     </div>
                     <div class="d-flex justify-content-center form_container">
 
@@ -60,7 +61,7 @@
                                 {{form.password2}}
                             </div>
                             <div class="d-flex justify-content-center mt-3 login_container">
-                                <input class="btn login_btn" type="submit" value="Register Account">
+                                <input class="btn login_btn" type="submit" value="{% trans 'Register Account' %}">
                             </div>
                         </form>
                     </div>
@@ -69,7 +70,7 @@
 
                     <div class="mt-4">
                         <div class="d-flex justify-content-center links">
-                            Already have an account? <a href="{% url 'login' %}" class="m1-2">Login</a>
+                            {% trans 'Already have an account?' %}<a href="{% url 'login' %}" class="m1-2">{% trans 'Login' %}</a>
                         </div>
                     </div>
                 </div>
@@ -77,12 +78,12 @@
         </div>
         <script>
             var form_fields = document.getElementsByTagName('input');
-            form_fields[1].placeholder = 'Username..';
-            form_fields[2].placeholder = 'First Name..';
-            form_fields[3].placeholder = 'Last Name..';
-            form_fields[4].placeholder = 'Email..';
-            form_fields[5].placeholder = 'Enter password...';
-            form_fields[6].placeholder = 'Re-enter Password...';
+            form_fields[1].placeholder = '{% trans 'Username..' %}';
+            form_fields[2].placeholder = '{% trans 'First Name..' %}';
+            form_fields[3].placeholder = '{% trans 'Last Name..' %}';
+            form_fields[4].placeholder = '{% trans 'Email..' %}';
+            form_fields[5].placeholder = '{% trans 'Enter password...' %}';
+            form_fields[6].placeholder = '{% trans 'Re-enter Password...' %}';
             for (var field in form_fields) {
                 form_fields[field].className += ' form-control';
             }
