--- a/store/templates/accounts/login.html
+++ b/store/templates/accounts/login.html
@@ -48,13 +48,16 @@
 
                         <div class="mt-4">
                             <div class="d-flex justify-content-center links">
-                                {% trans 'Don\'t have an account?' %} <a href="{% url 'register' %}" class="ml-2">{% trans 'Sign Up' %}</a>
+                                {% trans "Don't have an account?" %} <a href="{% url 'register' %}" class="ml-2">{% trans 'Sign Up' %}</a>
                             </div>
                         </div>
 
                     </div>
                 </div>
             </div>
+            
+        <script type="text/javascript" src="{% static '/js/lang_change.js' %}"></script>
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     </body>
