--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -5,7 +5,8 @@
 <html>
 	<head>
 		<title>Shooztars</title>
-	
+
+		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
 	
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
