added password reset feature through email 'gmail' reorganized and fixed the checkout.html file and fixed a problem wit hthe clearing the cart after purchase

--- a/store/templates/accounts/login.html
+++ b/store/templates/accounts/login.html
@@ -52,6 +52,12 @@
                             </div>
                         </div>
 
+                        <div class="">
+                            <div class="d-flex justify-content-center links">
+                                {% trans 'Forgot password?' %} <a href="{% url 'password_reset' %}" class="ml-2">{% trans 'Reset password' %}</a>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
