--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -6,7 +6,6 @@
         <div class="col-lg-6">
             <div class="box-element" id="form-wrapper"> 
                 <form id="form">
-
                     <div id="user-info">
                         <div class="form-field">
                             <input required class="form-control" type="text" name="name" placeholder="{% trans 'Name'%}">
@@ -15,7 +14,6 @@
                             <input required class="form-control" type="email" name="email" placeholder={% trans 'Email'%}>
                         </div>
                     </div>
-                    
                     <div id="shipping-info">
                         <hr>
                         <p>{% trans 'Shipping Information:' %}</p>
@@ -45,7 +43,6 @@
                             <input class="form-control" type="text" name="country" placeholder={% trans 'Country'%}>
                         </div>
                     </div>
-                    
                     <hr>
                     <input id="form-button" class="btn btn-success btn-block" type="submit" value={% trans 'Continue'%}>
                 </form>
@@ -56,7 +53,6 @@
                 <div id="paypal-button-container"></div>
             </div>
         </div>
-        
         <div class="col-lg-6">
             <div class="box-element"> 
                 <a  class="btn btn-outline-dark" href="{% url 'cart' %}">&#x2190; {% trans 'Back to cart'%}</a>
@@ -65,11 +61,11 @@
                 <hr>
                 {% for item in items %}
                 <div class="cart-row">
-					<div style="flex:2"><img class="row-image" src="{{item.product.imageURL}}"></div>
-					<div style="flex:2"><p>{{item.product.name}}</p></div>
-					<div style="flex:1"><p>{{item.product.price}}BGN</p></div>
-					<div style="flex:1"><p>{{item.quantity}}</p></div>
-				</div>
+    				<div style="flex:2"><img class="row-image" src="{{item.product.imageURL}}"></div>
+    				<div style="flex:2"><p>{{item.product.name}}</p></div>
+    				<div style="flex:1"><p>{{item.product.price}}BGN</p></div>
+    				<div style="flex:1"><p>{{item.quantity}}</p></div>
+    			</div>
                 {% endfor %}
                 <h5>{% trans 'Items: '%}{{order.get_cart_items}}</h5>
                 <h5>{% trans 'Total: '%}{{order.get_cart_total|floatformat:2}}BGN</h5>
@@ -77,106 +73,12 @@
         </div>
     </div>
 
+    <div id="order-total" data-total="{{ order.get_cart_total|floatformat:2 }}"></div>
+    <div id="order-info" data-shipping="{{order.shipping}}" data-store-url="{% url 'store' %}"></div>
+
     <script src="https://www.paypal.com/sdk/js?client-id=AY-fJbb3zM08C17G3Wnfef5JIFknq_XeDYqj2i7aQJqAzPVJeIp5sNkoLxotU76crO79oz1IrX88PJFd&currency=EUR"></script>
 
-    <script>
-        var total = '{{order.get_cart_total|floatformat:2}}'
-        var BGNtotal = parseFloat(total) * 0.51;
-        paypal.Buttons({
-
-            style: {
-                color:  'blue',
-                shape:  'pill',
-                label:  'pay',
-                height: 40
-            },
-            
-            createOrder: function(data, actions) {
-                return actions.order.create({
-                    purchase_units: [{
-                        amount: {
-                            value: BGNtotal.toFixed(2)
-                        }
-                    }]
-                });
-            },
-
-            onApprove: function(data, actions) {
-                return actions.order.capture().then(function(details) {
-                    submitFormData()
-                });
-            }
-
-        }).render('#paypal-button-container');
-    </script>
-
-    <script type="text/javascript">
-        var shipping = '{{order.shipping}}'
-
-        if(user != 'AnonymousUser'){
-            document.getElementById('user-info').innerHTML = ''
-        }
-        
-        var form = document.getElementById('form')
-        form.addEventListener('submit', function(e){
-            e.preventDefault()
-            console.log('Form Submitted...')
-            document.getElementById('form-button').classList.add("hidden")
-            document.getElementById('payment-info').classList.remove("hidden")
-            document.getElementById('shipping-info').classList.add("hidden")
-            document.getElementById('user-info').classList.add("hidden");
-            
-        })
-        function submitFormData(){
-            console.log('Payment button clicked')
-        
-            var userFormData = {
-                'name':null,
-                'email':null,
-                'total':total,
-            }
-        
-            var shippingInfo = {
-                'address':null,
-                'city':null,
-                'zipcode':null,
-                'country':null,
-            }
-
-            shippingInfo.address = form.address.value
-            shippingInfo.city = form.city.value
-            shippingInfo.zipcode = form.zipcode.value
-            shippingInfo.country = form.country.value
-        
-            if (user == 'AnonymousUser'){
-                userFormData.name = form.name.value
-                userFormData.email = form.email.value
-            }
-        
-            console.log('Shipping Info:', shippingInfo)
-            console.log('User Info:', userFormData)
-
-            var url = "/process_order/"
-            fetch(url, {
-                method:'POST',
-                headers:{
-                    'Content-Type':'application/json',
-                    'X-CSRFToken':csrftoken,
-                }, 
-                body:JSON.stringify({'form':userFormData, 'shipping':shippingInfo}),
-                
-            })
-            
-            .then((response) => response.json())
-            .then((data) => {
-                  console.log('Success:', data)
-                  alert('Transaction completed')
-                  cart = {}
-                  document.cookie ='cart=' + JSON.stringify(cart) + ";domain=;path=/"
-                  window.location.href = "{% url 'store' %}"
-                })
-
-        }
-    </script>
-    
+    <script src="{% static 'js/main.js' %}"></script>
+    <script src="{% static 'js/clear_cart.js' %}"></script>
+    <script src="{% static 'js/paypal_button.js' %}"></script>
 {% endblock content %}
