--- a/static/css/Reg_Log.css
+++ b/static/css/Reg_Log.css
@@ -69,3 +69,18 @@ html {
     padding: 10px;
     margin-top: 10px;
 }
+
+.password-reset-styling {
+    font-size: 1.2em;
+    color: #333;
+    margin-bottom: 1em;
+}
+
+.password-reset-message {
+    padding: 2em;
+    background-color: #000000;
+    border-radius: 1em;
+    box-shadow: 0 0.5em 1em 0 rgba(0, 0, 0, 0.1);
+    max-width: 600px;
+    margin: auto;
+}
