--- a/static/css/main.css
+++ b/static/css/main.css
@@ -104,3 +104,8 @@ h1,h2,h3,h4,h5,h6{
     color: white !important;
 	font-weight: bold;
 }
+
+.reset-password:hover {
+    background-color: rgb(11, 225, 11);
+    border-color: rgb(11, 225, 11);
+}
