--- a/store/templates/accounts/profile.html
+++ b/store/templates/accounts/profile.html
@@ -2,12 +2,21 @@
 {% load i18n %}
 {% load static %}
 {% block content %}
+    <head>
+        <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
+    </head>
+    <body>
+        <h1>{% trans 'Welcome, ' %} {{ user.username }}</h1>
+        <p>{% trans 'First name:' %} {{ user.first_name }}</p>
+        <p>{% trans 'Last name:' %} {{ user.last_name }}</p>
+        <p>{% trans 'Email:' %} {{ user.email }}</p>
 
-<h1>{% trans 'Welcome, ' %} {{ user.username }}</h1>
-<p>{% trans 'First name:' %} {{ user.first_name }}</p>
-<p>{% trans 'Last name:' %} {{ user.last_name }}</p>
-<p>{% trans 'Email:' %} {{ user.email }}</p>
-<p>{% trans 'Staff status:' %} {{ user.is_staff }}</p>
-<p>{% trans 'Date joined:' %} {{ user.date_joined }}</p>
+        {% if user.is_staff %}
+            <p>{% trans 'Staff status:' %} {{ user.is_staff }}</p>
+        {% endif %}
 
+        <p>{% trans 'Date joined:' %} {{ user.date_joined }}</p>
+
+        <a href="{% url 'password_reset' %}" class="btn btn-primary reset-password">{% trans 'Reset Password' %}</a>
+    </body>
 {% endblock %}
