--- a/store/templates/accounts/password_reset_form.html
+++ b/store/templates/accounts/password_reset_form.html
@@ -14,7 +14,7 @@
                     <div class="d-flex justify-content-center mb-4">
                         <h3 id="form-title">{% trans 'Enter new password' %}</h3>
                     </div>
-                    <p class="text-center">{% trans 'Enter your new password and confirm it.' %}</p>
+                    <p class="text-center">{% trans 'Enter your new password' %}</p>
                     <div class="d-flex justify-content-center form_container">
                         <form method="POST">
                             {% csrf_token %}
